# cdb64-rs

./: Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yaml
benches/: cdb_benchmarks.rs
c/: .gitignore  Cargo.toml  Makefile  build.rs  cbindgen.toml
c/src/: lib.rs
c/tests/: integration_test.c  test_main.c
cdb64/: Cargo.toml
cdb64/benches/: cdb_benchmarks.rs
cdb64/src/: cdb.rs  hash.rs  iterator.rs  lib.rs  util.rs  writer.rs
cdb64/tests/: compatible.rs  edge_cases.rs  rw_test.rs
node/: Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml
node/__test__/: index.spec.mjs
node/src/: lib.rs
python/: Cargo.toml  pyproject.toml
python/cdb64_python/: __init__.py
python/src/: lib.rs
python/tests/: test_cdb64.py
src/: cdb.rs  hash.rs  iterator.rs  lib.rs  util.rs  writer.rs
tests/: rw_test.rs
