[workspace]
resolver = "3"
members = ["cdb64", "node", "python"]
default-members = ["cdb64"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ever0de/cdb64-rs"

[workspace.dependencies]
cdb64 = { path = "cdb64", version = "0.1.0" }

[profile.release]
lto = true
