[package]
name = "cdb64-node"
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
cdb64 = { workspace = true }

[build-dependencies]
napi-build = "2.0.1"
